# mesarodada

./: .gitignore  README.md  main.py  pyproject.toml
src/mesarodada/: mesa_rodadas.py
tests/: test_mesa_rodada.py
