[project]
name = "mesarodada"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jones Sabino", email = "jones.sabino@gmail.com"},
]
dependencies = ["pytest>=8.3.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
